RESOLVED FIXED160014
[Cairo] Fix a crash in fast/canvas/canvas-getImageData-invalid-result-buffer-crash.html
https://bugs.webkit.org/show_bug.cgi?id=160014
Summary [Cairo] Fix a crash in fast/canvas/canvas-getImageData-invalid-result-buffer-...
Carlos Garcia Campos
Reported 2016-07-21 01:04:22 PDT
In r202887 some null checks were added for JSArray::createUninitialized (and related) but not for the ImageBuffer cairo implementation.
Attachments
Patch (1.70 KB, patch)
2016-07-21 01:06 PDT, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2016-07-21 01:06:39 PDT
Carlos Garcia Campos
Comment 2 2016-07-21 09:02:27 PDT
Note You need to log in before you can comment on or make changes to this bug.