[Cairo] Fix a crash in fast/canvas/canvas-getImageData-invalid-result-buffer-crash.html https://bugs.webkit.org/show_bug.cgi?id=160014

Reviewed by Michael Catanzaro.

In r202887 some null checks were added for JSArray::createUninitialized (and related) but not for the
ImageBuffer cairo implementation.

* platform/graphics/cairo/ImageBufferCairo.cpp:
(WebCore::getImageData): Return early if Uint8ClampedArray::createUninitialized() returns nullptr.

Canonical link: https://commits.webkit.org/178180@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203503 268f45cc-cd09-0410-ab3c-d52691b4dbfc